--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,7 @@
 
   <div class="row">
     <div class="col">
-      <p>By: <%= link_to @product.merchant.username, merchant_path(@product.merchant_id) %></p>
+      <p>By: <%= link_to @product.merchant.username, merchants_path(@product.merchant_id) %></p>
     </div>
   </div>
 
