--- a/app/views/products/_add_edit_partials.html.erb
+++ b/app/views/products/_add_edit_partials.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @product do |f| %>
+<%= form_with model: @product, url: merchant_products_path do |f| %>
 
     <div class="form-group">
       <%= f.label :name %>
