--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 
   <div class="nav-option" id="cart">
     <%= @shopping_cart.order_items.length %>
-    <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), root_path %>
+    <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), checkout_path %>
 
   </div>
 </nav>
