--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,2 +1,41 @@
 <h1>Orders#edit</h1>
 <p>Find me in app/views/orders/edit.html.erb</p>
+
+<form_with model: @order, url: merchant_products_path do |f| %>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="cc_name">Name of Cardholder</label>
+      <input type="text" class="form-control" placeholder="Ada Lovelace">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="mailing_address">Mailing Address</label>
+      <input type="text" class="form-control" placeholder="1234 Main St">
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" placeholder="yggurlie@yahoo.com">
+      </div>
+      <div class="form-group col-md-2">
+        <label for="cc">Credit Card Number</label>
+        <input type="text" class="form-control" placeholder="1234123412341234">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="cc_expiration">Expiration Date</label>
+        <input type="text" class="form-control" placeholder="10/20">
+      </div>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="cvv">CVV</label>
+      <input type="text" class="form-control" placeholder="10/20">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="zip">Zip</label>
+      <input type="text" class="form-control" placeholder="90210">
+    </div>
+  </div>
+</div>
+
+<button type="submit" class="btn btn-primary">Continue</button>
+<% end %>
+</form>
