--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,38 @@
 <h1>Shopping Cart</h1>
 
-<p>We plan to put things in here</p>
+<div class="row p-5">
+  <div class="col-md-12">
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="border-0 font-weight-bold">Quantity</th>
+          <th class="border-0 font-weight-bold">Product_ID</th>
+          <th class="border-0 font-weight-bold">Item</th>
+          <th class="border-0 font-weight-bold">Cost</th>
+          <th class="border-0 font-weight-bold">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% total = 0 %>
+        <% @shopping_cart.order_items.each do |order_item| %>
+        <% product = Product.find_by(id: order_item.product_id) %>
+        <% total += product.price %>
+        <tr>
+          <td><%= order_item.quantity %></td>
+          <td><%= order_item.product.id %></td>
+          <td><%= order_item.product.name %></td>
+          <td><%= order_item.product.price %></td>
+          <td><%= order_item.product.status %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="d-flex flex-row-reverse bg-dark text-white p-4">
+  <div class="py-3 px-5 text-right">
+    <div class="mb-2">Grand Total</div>
+    <div class="h2 font-weight-light"><%= number_to_currency(total) %></div>
+  </div>
+</div>
