updated shopping cart bootstrap to mimic order summary for merchant - keeping up with identical styling for consistency

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,31 +2,33 @@
 
 <div class="row p-5">
   <div class="col-md-12">
+
     <table class="table">
+      <h3>Products</h3>
       <thead>
         <tr>
-          <th class="border-0 font-weight-bold">Quantity</th>
-          <th class="border-0 font-weight-bold">Product_ID</th>
-          <th class="border-0 font-weight-bold">Item</th>
-          <th class="border-0 font-weight-bold">Cost</th>
-          <th class="border-0 font-weight-bold">Status</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Product_ID</th>
+          <th scope="col">Item</th>
+          <th scope="col">Cost</th>
+          <th scope="col">Status</th>
         </tr>
       </thead>
-      <tbody>
-        <% total = 0 %>
-        <% @shopping_cart.order_items.each do |order_item| %>
-        <% product = Product.find_by(id: order_item.product_id) %>
-        <% total += product.price %>
-        <tr>
-          <td><%= order_item.quantity %></td>
-          <td><%= order_item.product.id %></td>
-          <td><%= order_item.product.name %></td>
-          <td><%= order_item.product.price %></td>
-          <td><%= order_item.product.status %></td>
-        </tr>
-        <% end %>
-      </tbody>
+      <% total = 0 %>
+      <% @shopping_cart.order_items.each do |order_item| %>
+      <% product = Product.find_by(id: order_item.product_id) %>
+      <% total += product.price %>
+      <tr>
+        <td scope="row"><%= order_item.quantity %></td>
+        <td scope="row"><%= order_item.product.id %></td>
+        <td scope="row"><%= order_item.product.name %></td>
+        <td scope="row"><%= order_item.product.price %></td>
+        <td scope="row"><%= order_item.product.status %></td>
+        <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
+      </tr>
+      <%end%>
     </table>
+
   </div>
 </div>
 
