--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit "Add Category", class: "btn btn-primary" %>
     </div>
   <% end %>
 </main>
