--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -36,10 +36,16 @@
       <td scope="row"><%=product.name%></td>
       <td scope="row"><%=product.price%></td>
       <td scope="row"><%=product.inventory%></td>
-      <td scope="row"><%=link_to product.is_active%></td>
+      <td scope="row">
+        <%if product.is_active == true%>
+        <button type="button" class="btn btn-info"><%=link_to "Active", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
+        <%elsif%>
+          <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
+          <%end%>
+      </td>
       <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
-      <%end%>
     </tr>
+      <%end%>
     </table>
   </div>
 </section>
