--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
 <h2>Add Product</h2>
 
-<%= render partial: "add_edit_partials",
+<%= render partial: "add_partials",
 locals: { action_name: "Add Product"} %>
