--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
         <% end %>
       </div>
 
+
+
       <div class="braineaze">
         <h1><%=link_to "Braineaze", products_path %></h1>
       </div>
@@ -72,6 +74,10 @@
     <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), checkout_path %>
 
   </div>
+  <!-- <form class="form-inline my-2 my-lg-0">
+  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form> -->
 </nav>
 </header>
 
@@ -83,6 +89,7 @@
   </p>
   <% end %>
 </section>
+
 
 <main>
 
