--- a/app/views/products/_add_partials.html.erb
+++ b/app/views/products/_add_partials.html.erb
@@ -19,7 +19,7 @@
 
 <div class="form-group">
   <%= f.label :image %>
-  <%= f.text_field :image, class: "form-control" %>
+  <%= f.text_area :image, class: "form-control" %>
 </div>
 
 <div class="form-group">
