--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -18,7 +18,7 @@
 
     <div class="form-group">
       <%= f.label :image %>
-      <%= f.text_field :image, class: "form-control" %>
+      <%= f.text_area :image, class: "form-control" %>
     </div>
 
     <div class="form-group">
