added some more styling as well as a root page different than the products index page with carousel

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<h3>THANK YOU FOR SHOPPING AT BRAINEAZA!</h3>
+<h4>YOUR ORDER IS COMPLETE</h4>
+<p>
+  We're currently processing your order. We will send you an email as soon as your order is shipped.
+</p>
+
+<h3>Order Details</h3>
