--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><h4>Your Dashboard</h4></a>
+  <a class="navbar-brand" href="#"><h4>Your Dashboard - Welcome <%= @current_merchant.username %></h4></a>
 </nav>
+</br>
 <div>
-
 <button type="button" class="btn btn-info"> <%=link_to "New Product", new_merchant_product_path(@current_merchant.id)%>
 </button>
 </div>
@@ -15,7 +15,9 @@
 <section class="merchant-detail-summary">
   <div class="dasboard-container">
     <div class="card" style="width: 18rem;">
-      <h4>Account Summary</h4>
+      <div class="card-header">
+        <h4>Account Summary</h4>
+  </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Name: <%= @current_merchant.username %></li>
         <li class="list-group-item">Joined site on: <%= @current_merchant.created_at.strftime("%B %d, %Y")%></li>
@@ -23,6 +25,21 @@
       </ul>
     </div>
   </div>
+<hr />
+  <table class="table">
+    <h3>Orders</h3>
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Order #</th>
+        <th scope="col">Purchased Date</th>
+        <th scope="col">Product</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">price</th>
+        <th scope="col">Order Status</th>
+        <th scope="col"> </th>
+      </tr>
+    </thead>
+</table>
 <hr />
     <table class="table">
       <h3>Merchandise</h3>
