--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -56,7 +56,8 @@
   <div class="row">
     <div class="col">
       <section>
-        <h3><%= button_to "Add to Cart", root_path %></h3>
+        <button type="button" class="btn btn-info"> <%=link_to "Add to Cart", order_items_path%>
+        </button>
       </section>
     </div>
   </div>
