added some more styling to the page

--- a/app/assets/stylesheets/merchants.scss
+++ b/app/assets/stylesheets/merchants.scss
@@ -8,3 +8,9 @@
 
 .merchant-detail-summary {
 }
+
+.button-summary {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
