--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 
 
       <div class="braineaze">
-        <h1><%=link_to "Braineaze", products_path %></h1>
+        <h1><%=link_to "Braineaze", root_path %></h1>
       </div>
 
       <div class="nav-option" id="products">
