Fix views so order_item can be created/added to cart

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= order_item.product.id %></td>
           <td><%= order_item.product.name %></td>
           <td><%= order_item.product.price %></td>
-          <td><%= order_item.product.status %></td>
+          <td><%= order_item.status %></td>
         </tr>
         <% end %>
       </tbody>
