--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -52,13 +52,19 @@
     </div>
   </div>
 
-
   <div class="row">
     <div class="col">
       <section>
-        <button type="button" class="btn btn-info"> <%=link_to "Add to Cart", order_items_path%>
-        </button>
-      </section>
-    </div>
-  </div>
+        <%= form_with model: @shopping_cart.order_items, url: order_items_path do |f| %>
+
+        <%= f.hidden_field :product_id, value: @product.id %>
+        <%= f.select(:quantity, (1..@product.inventory)) %>
+
+        <button type="submit" class="btn btn-info">Add to Cart</button>
+        <% end %>
+      </form>
+    </button>
+  </section>
+</div>
+</div>
 </div>
