--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,7 +20,7 @@
         <% total += product.price %>
         <tr>
           <td><section class="remove"><%= link_to "x", order_item_path(order_item.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you want remove this item from your cart?' } %></section>
-</td>
+          </td>
           <td>
             <%= form_with model: order_item do |f| %>
             <%= f.select(:quantity, (1..order_item.product.inventory)) %>
@@ -40,6 +40,10 @@
 
 <div class="d-flex flex-row-reverse bg-dark text-white p-4">
   <div class="py-3 px-5 text-right">
+    <div class="">
+      <section class="remove"><%= link_to "Clear Cart", order_path(@shopping_cart.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you wan to clear your cart?' } %></section>
+
+    </div>
     <div class="mb-2">Grand Total</div>
     <div class="h2 font-weight-light"><%= number_to_currency(total) %></div>
   </div>
