Modify views to clear cart/checkout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
 
   <div class="nav-option" id="cart">
     <%= @shopping_cart.order_items.length %>
-    <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), checkout_path %>
+    <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), cart_path %>
 
   </div>
   <!-- <form class="form-inline my-2 my-lg-0">
