--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -41,10 +41,15 @@
 <div class="d-flex flex-row-reverse bg-dark text-white p-4">
   <div class="py-3 px-5 text-right">
     <div class="">
-      <section class="remove"><%= link_to "Clear Cart", order_path(@shopping_cart.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you wan to clear your cart?' } %></section>
-
     </div>
     <div class="mb-2">Grand Total</div>
     <div class="h2 font-weight-light"><%= number_to_currency(total) %></div>
+    <section class="remove">
+      <%= link_to "Clear Cart", order_path(@shopping_cart.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you wan to clear your cart?' } %>
+    </section>
+    
+    <section>
+        <%= link_to "Checkout", checkout_path %>
+    </section>
   </div>
 </div>
