--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,11 +7,11 @@
       <h3>Products</h3>
       <thead>
         <tr>
-<<<<<<< HEAD
           <th scope="col">Quantity</th>
           <th scope="col">Product_ID</th>
           <th scope="col">Item</th>
           <th scope="col">Cost</th>
+          <th scope="col">Status</th>
           <th scope="col">Status</th>
         </tr>
       </thead>
@@ -28,37 +28,6 @@
         <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
       </tr>
       <%end%>
-=======
-          <th></th>
-          <th class="border-0 font-weight-bold">Quantity</th>
-          <th class="border-0 font-weight-bold">Product_ID</th>
-          <th class="border-0 font-weight-bold">Item</th>
-          <th class="border-0 font-weight-bold">Cost</th>
-          <th class="border-0 font-weight-bold">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% total = 0 %>
-        <% @shopping_cart.order_items.each do |order_item| %>
-        <% product = Product.find_by(id: order_item.product_id) %>
-        <% total += product.price %>
-        <tr>
-          <td><section class="remove"><%= link_to "x", order_item_path(order_item.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you want remove this item from your cart?' } %></section>
-          </td>
-          <td>
-            <%= form_with model: order_item do |f| %>
-            <%= f.select(:quantity, (1..order_item.product.inventory)) %>
-            <%= f.submit "Update Quantity", class: "button" %>
-            <% end %>
-          </td>
-          <td><%= order_item.product.id %></td>
-          <td><%= order_item.product.name %></td>
-          <td><%= order_item.product.price %></td>
-          <td><%= order_item.status %></td>
-        </tr>
-        <% end %>
-      </tbody>
->>>>>>> alg
     </table>
 
   </div>
@@ -73,7 +42,7 @@
     <section class="remove">
       <%= link_to "Clear Cart", order_path(@shopping_cart.id), method: :delete, class: "remove-btn", data: {confirm: 'Are you sure you wan to clear your cart?' } %>
     </section>
-    
+
     <section>
         <%= link_to "Checkout", checkout_path %>
     </section>
