--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,5 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<h4>THANK YOU FOR SHOPPING AT BRAINEAZA!</br>YOUR ORDER IS COMPLETE</h4>
 
-<h1>This will be receipt page</h1>
-
-<h3>THANK YOU FOR SHOPPING AT BRAINEAZA!</h3>
-<h4>YOUR ORDER IS COMPLETE</h4>
 <p>
   We're currently processing your order. We will send you an email as soon as your order is shipped.
 </p>
