Add currency format to price

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -58,7 +58,7 @@
       <%@products.each do |product| %>
       <td scope="row"><%=product.name%></td>
       <td scope="row"><%=product.inventory%></td>
-      <td scope="row"><%=product.price%></td>
+      <td scope="row"><%= number_to_currency(product.price)%></td>
       </td>
       <td scope="row">
         <%if product.is_active == true%>
