minor cosmetic changes to button and dashboard welcome

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><h4>Your Dashboard - Welcome <%= @current_merchant.username %></h4></a>
+  <a class="navbar-brand" href="#"><h4>Welcome <%= @current_merchant.username %>!</h4></a>
 </nav>
 </br>
 <div class="button-summary">
