--- a/app/assets/stylesheets/merchants.scss
+++ b/app/assets/stylesheets/merchants.scss
@@ -9,8 +9,14 @@
 .merchant-detail-summary {
 }
 
-.button-summary {
+.general{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.general button{
+  margin: 20px;
+  padding: 10px;
 }
