--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,34 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><h4>Welcome <%= @current_merchant.username %>!</h4></a>
+  <h4>Welcome <%= @current_merchant.username %>!</h4>
 </nav>
-</br>
-<div class="button-summary">
 
-  <div>
-    <button type="button" class="btn btn-info"> <%=link_to "New Product", new_merchant_product_path(@current_merchant.id)%>
-    </button>
-  </div>
-</br>
-<div>
-  <button type="button" class="btn btn-info"> <%=link_to "Add Category", new_category_path%>
-  </button>
-</div>
+<container class="general">
+  <div class="new-add-buttons">
+    <div>
+      <button type="button" class="btn btn-info"> <%=link_to "New Product", new_merchant_product_path(@current_merchant.id)%>
+      </button>
+    </div>
 
-<section class="merchant-detail-summary">
-  <div class="dasboard-container">
-    <div class="card" style="width: 18rem;">
-      <div class="card-header">
-        <h4>Account Summary</h4>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Name: <%= @current_merchant.username %></li>
-        <li class="list-group-item">Joined site on: <%= @current_merchant.created_at.strftime("%B %d, %Y")%></li>
-        <li class="list-group-item">Total Revenue to-date: $<%= @revenue %></li>
-      </ul>
+    <div>
+      <button type="button" class="btn btn-info"> <%=link_to "Add Category", new_category_path%>
+      </button>
     </div>
   </div>
-</div>
-<hr />
+
+  <section class="account-summary">
+    <div class="dasboard-container">
+      <div class="card" style="width: 18rem;">
+        <div class="card-header">
+          <h4>Account Summary</h4>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Name: <%= @current_merchant.username %></li>
+          <li class="list-group-item">Joined site on: <%= @current_merchant.created_at.strftime("%B %d, %Y")%></li>
+          <li class="list-group-item">Total Revenue to-date: $<%= @revenue %></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+</container>
+
+<section class="merchant-orders">
   <table class="table">
     <h3>Orders</h3>
     <thead class="thead-dark">
@@ -42,34 +46,34 @@
         <th scope="col"> </th>
       </tr>
     </thead>
+  </table>
+  <hr />
+  <table class="table">
+    <h3>Merchandise</h3>
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Stock</th>
+        <th scope="col">Price</th>
+        <th scope="col">Status</th>
+        <th scope="col"> </th>
+      </tr>
+    </thead>
+    <%@products.each do |product| %>
+    <td scope="row"><%=product.name%></td>
+    <td scope="row"><%=product.inventory%></td>
+    <td scope="row"><%= number_to_currency(product.price)%></td>
+  </td>
+  <td scope="row">
+    <%if product.is_active == true%>
+    <button type="button" class="btn btn-info"><%=link_to "Active", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
+    <%elsif%>
+    <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
+    <%end%>
+  </td>
+  <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
+</tr>
+<%end%>
 </table>
-<hr />
-    <table class="table">
-      <h3>Merchandise</h3>
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Stock</th>
-          <th scope="col">Price</th>
-          <th scope="col">Status</th>
-          <th scope="col"> </th>
-        </tr>
-      </thead>
-      <%@products.each do |product| %>
-      <td scope="row"><%=product.name%></td>
-      <td scope="row"><%=product.inventory%></td>
-      <td scope="row"><%= number_to_currency(product.price)%></td>
-      </td>
-      <td scope="row">
-        <%if product.is_active == true%>
-        <button type="button" class="btn btn-info"><%=link_to "Active", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
-        <%elsif%>
-          <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
-          <%end%>
-      </td>
-      <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
-    </tr>
-      <%end%>
-    </table>
-  </div>
+</div>
 </section>
