--- a/app/assets/stylesheets/merchants.scss
+++ b/app/assets/stylesheets/merchants.scss
@@ -20,3 +20,11 @@
   margin: 20px;
   padding: 10px;
 }
+.orders-merchandise{
+  margin-left: 8%;
+  margin-right: 8%;
+}
+
+.orders-merchandise h3{
+  padding-top: 50px;
+}
