--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -47,6 +47,7 @@
       </tr>
     </thead>
     <tr>
+      <% if @order_items != []%>
       <%@order_items.each do |item| %>
       <td scope="row"><%=item.id%></td>
       <td scope="row"><%=item.created_at.strftime("%m/%d/%Y")  %></td>
@@ -55,6 +56,7 @@
       <td scope="row">$<%=item.quantity * item.product.price%></td>
       <td scope="row"><%=item.status%></td>
       <%end%>
+      <% end %>
     </tr>
   </table>
 
