--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -47,7 +47,7 @@
       </tr>
     </thead>
     <tr>
-      <% if @order_items != []%>
+      <% if @order_items.include? OrderItem%>
       <%@order_items.each do |item| %>
       <td scope="row"><%=item.id%></td>
       <td scope="row"><%=item.created_at.strftime("%m/%d/%Y")  %></td>
@@ -72,8 +72,8 @@
         <th scope="col"> </th>
       </tr>
     </thead>
+    <%@products.each do |product| %>
     <tr>
-      <%@products.each do |product| %>
       <td scope="row"><%=product.name%></td>
       <td scope="row"><%=product.inventory%></td>
       <td scope="row"><%= number_to_currency(product.price)%></td>
@@ -81,16 +81,11 @@
         <%if product.is_active == true%>
         <button type="button" class="btn btn-info"><%=link_to "Active", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post %></button>
         <%elsif%>
-<<<<<<< HEAD
           <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post %></button>
           <%end%>
-=======
-        <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post%></button>
-        <%end%>
->>>>>>> 331aba1dff1ce5614b2a2ce9bd910b7c4ba6e1a1
       </td>
       <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
-      <%end%>
     </tr>
+    <%end%>
   </table>
 </section>
