--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -46,20 +46,20 @@
         <th scope="col"> </th>
       </tr>
     </thead>
+    <% if @order_items != []%>
+    <%@order_items.each do |item| %>
+    <% unless item == nil %>
     <tr>
-      <% if @order_items.include? OrderItem%>
-      <%@order_items.each do |item| %>
-      <% if @order_items.status != 'pending' %>
       <td scope="row"><%=item.id%></td>
       <td scope="row"><%=item.created_at.strftime("%m/%d/%Y")  %></td>
       <td scope="row"><%=item.product.name%></td>
       <td scope="row"><%=item.quantity%></td>
       <td scope="row">$<%=item.quantity * item.product.price%></td>
       <td scope="row"><%=item.status%></td>
-      <%end%>
-      <%end%>
-      <%end%>
     </tr>
+    <%end%>
+    <%end%>
+    <%end%>
   </table>
 
 
@@ -83,8 +83,8 @@
         <%if product.is_active == true%>
         <button type="button" class="btn btn-info"><%=link_to "Active", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post %></button>
         <%elsif%>
-          <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post %></button>
-          <%end%>
+        <button type="button" class="btn btn-info"><%=link_to "Retired", change_status_merchant_product_path(@current_merchant.id, product.id), method: :post %></button>
+        <%end%>
       </td>
       <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_merchant_product_path(@current_merchant.id, product.id)%></button></td>
     </tr>
