--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,6 +6,7 @@
     </div>
     <div class="col-4">
       <h3>Product Reviews</h3>
+      <%= link_to "Add new review", new_product_review_path(@product.id) %>
     </div>
   </div>
 
