--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,9 +57,13 @@ header nav {
 }
 
 .login{
-  grid-column: 5 / 6;
+  grid-column: 2 / 6;
   grid-row: 1 / 2;
   text-align: right;
+}
+
+.login #my_account{
+  margin-right: 20px;
 }
 
 .nav-option{
