--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,13 @@
 
       <div class="login">
         <% if @current_merchant %>
-        <button type="button" class="btn btn-info">
+        <button type="button" class="btn btn-info" id="my_account">
           <%= link_to "My Account", dashboard_path%>
-          <%= link_to "| Log Out", '/sessions/logout', method: "post" %>
+        </button>
+        <button type="button" class="btn btn-info">
+          <%= link_to "Log Out", '/sessions/logout', method: "post" %></button>
           <% else %>
-          <%= link_to "| Log In", '/auth/github' %>
+          <button type="button" class="btn btn-info"><%= link_to "Log In", '/auth/github' %>
         </button>
         <% end %>
       </div>
@@ -77,7 +79,7 @@
   <!-- <form class="form-inline my-2 my-lg-0">
   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form> -->
+</form> -->
 </nav>
 </header>
 
