added pagination to product display.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
 
   <% else %>
 
+  <%= will_paginate @products %>
   <h2 class="title-page">List of All Products</h2>
 
   <div class="flex-container">
