--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -53,3 +53,16 @@
   width: 500px;
   height: 400px;
 }
+
+.pagination {
+  .previous_page { background:#ffffff; color:white; border: 2px solid #35324D; padding: .5em; font-size: .8em; color: #35324d; }
+  .previous_page.disabled { background: white; color: #dedede; border: 2px solid #dedede }
+  .current { background: #FF9F05; color: #ffffff ; border: .4em solid #FF9F05;}
+  .next_page { background:#ffffff; color:white; border: 2px solid #35324D; padding: .5em; font-size: .8em; color: #35324d; }
+  .next_page.disabled { background: white; color: #dedede; border: 2px solid #dedede }
+  text-align: right;
+  padding-right: 3em;
+  display: flex;
+  flex-direction: row-reverse;
+
+}
