--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,27 +83,14 @@
 </nav>
 </header>
 
-<% flash.each do | name, message | %>
-<% if name == "error" %>
-<h4>Please check the following</h4>
-<dl>
-  <% flash[:error].each do |field, error_messages| %>
-  <dt><strong><%= field.upcase %></strong></dt>
-  <% if error_messages.class == Array %>
-  <% error_messages.each do |error_message| %>
-  <dd> >> <%= error_message %></dd>
+<section class="flash-messages">
+  <% flash.each do |key, message| %>
+  <% alert_class = key == "error" ? "danger" : key %>
+  <p class="alert alert-<%= alert_class %>">
+    <%= message %>
+  </p>
   <% end %>
-  <% else %>
-  <dd> >> <%= error_messages %></dd>
-  <% end %>
-</li>
-<% end %>
-</dl>
-<% else %>
-<h4><%= message %></h4>
-<% end %>
-<% end %>
-
+</section>
 <main>
 
 
