--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,4 @@
 <h2>Update Product</h2>
 
 <%= render partial: "add_edit_partials",
-locals: { action_name: "Update Product", product_path: merchant_products_path} %>
+locals: { action_name: "Update Product", product_path: merchant_product_path} %>
