--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -66,3 +66,17 @@
   justify-content: flex-end;
 
 }
+
+.blockquote {
+  font-style: italic;
+  margin-left: -100px;
+  margin-right: -100px;
+}
+
+.blockquote p:before {
+  content: open-quote;
+}
+
+.blockquote p:after {
+  content: close-quote;
+}
