--- a/app/views/products/_add_edit_partials.html.erb
+++ b/app/views/products/_add_edit_partials.html.erb
@@ -38,6 +38,6 @@
 </div>
 
 <div class="form-group">
-  <%= f.submit action_name, class: "btn btn-primary" %>
+  <%= f.submit action_name, class: "btn btn-info" %>
 </div>
 <% end %>
