--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,7 @@
   <% else %>
 
   <h2 class="title-page">All Products</h2>
+
   <% end %>
 
   <div class="flex-container">
@@ -21,7 +22,9 @@
     <% end %>
   </div>
 
+  <% unless params[:merchant_id] || params[:category_id] %>
   <%= will_paginate @products %>
+  <% end %>
 
 
 </div>
