cosmetic changes in dashboard and receipt

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -96,3 +96,16 @@
 .label-checkbox{
   margin-left: 100px;
 }
+
+.btn-link{
+  text-decoration: none;
+  color: rgb(88, 88, 88);
+
+}
+
+.btn-link:hover{
+  text-decoration: none;
+  font-style: italic;
+  color: rgb(32, 32, 32);
+
+}
