--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,5 @@
-<h4>THANK YOU FOR SHOPPING AT BRAINEAZA!</br>YOUR ORDER IS COMPLETE</h4>
+<h4>THANK YOU FOR SHOPPING AT BRAINEAZE!</h4>
+<h4>YOUR ORDER IS COMPLETE</h4>
 
 <p>
   We're currently processing your order.
