updated quote banner on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,10 +21,10 @@ button a, a:hover{
   color: white;
 }
 
-main{
-  padding-left: 5%;
-  padding-right: 5%;
-}
+// main{
+//   padding-left: 5%;
+//   padding-right: 5%;
+// }
 
 
 // NAVIGATION BAR
