--- a/app/views/products/root.html.erb
+++ b/app/views/products/root.html.erb
@@ -1,47 +1,45 @@
-<div>
-  <blockquote class="blockquote text-center">
-    <footer class="blockquote-footer"><h2 class="shoptext text-center"><strong>Welcome To BRAINEAZE</strong></h2><p class="lead">
-      From games and puzzles to toys and items for the whole family, shop for fun ways to a healthier brain.</p>N.E. Wan - <cite title="Source Title">C.E.O of BrainEaze Inc.</cite></footer>
-    </blockquote>
-  </div>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: 1000px; margin: 0 auto">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1515508268448-8d0d292bc49a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0603ddec68ba5b5de8ef28ce2cf70f70&auto=format&fit=crop&w=1650&q=80" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Develop a passion for learning</h5>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cd2ef161d15d6a9fafef1993e76bbe39&auto=format&fit=crop&w=1650&q=80">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>The brain is a monstrous, beautiful mess. </h5>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6c18d87b91cee85cbe63912304dba923&auto=format&fit=crop&w=1650&q=80" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>The brain is truly wonderful and complex, seamlessly and apparently effortlessly able to attend to multiple tasks at the same time.</h5>
-        </div>
+
+<div class="p-3 mb-2 bg-info text-white text-center" id="home-banner"><p class="quote">From games and puzzles to toys and items for the whole family, shop for fun ways to a healthier brain.</p>N.E. Wan - <cite title="Source Title">C.E.O of BrainEaze Inc.</cite>
+</div>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: 1000px; margin: 0 auto">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1515508268448-8d0d292bc49a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0603ddec68ba5b5de8ef28ce2cf70f70&auto=format&fit=crop&w=1650&q=80" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Develop a passion for learning</h5>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cd2ef161d15d6a9fafef1993e76bbe39&auto=format&fit=crop&w=1650&q=80">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>The brain is a monstrous, beautiful mess. </h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6c18d87b91cee85cbe63912304dba923&auto=format&fit=crop&w=1650&q=80" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>The brain is truly wonderful and complex, seamlessly and apparently effortlessly able to attend to multiple tasks at the same time.</h5>
+      </div>
+    </div>
   </div>
-  <div>
-    <hr />
-    <p>
-      BrainEaze is your one stop shop for educational games, meditational resources, appeals and neurotropics and much more
-    </p>
-  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div class="p-3 mb-2 bg-gradient-primary text-white">
+  <hr />
+  <p class="text-info">
+    BrainEaze is your one stop shop for educational games, meditational resources, appeals and neurotropics and much more
+  </p>
+</div>
