updated product stylesheet

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -43,7 +43,6 @@
   border: 1px solid green;
 }
 
-
 .page-container {
   border: 1px solid black;
 }
@@ -95,7 +94,6 @@
   margin-left: 100px;
 }
 
-<<<<<<< HEAD
 .quote:before {
   content: open-quote;
 }
@@ -111,7 +109,8 @@
 .text-info {
   background-color: gray;
   text-align: center;
-=======
+}
+
 .btn-link{
   text-decoration: none;
   color: rgb(88, 88, 88);
@@ -122,6 +121,4 @@
   text-decoration: none;
   font-style: italic;
   color: rgb(32, 32, 32);
-
->>>>>>> 3887647f5660d55d0ec2c5f20a1d082789ed7fc0
 }
