--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -107,7 +107,9 @@
 }
 
 .text-info {
-  background-color: gray;
+  margin-top: 5%;
+  height: 200px;
+  font-size: 32px;
   text-align: center;
 }
 
