--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,12 +89,12 @@
 </section>
 <main>
 
-  
+
   <%= yield %>
 </main>
 
 <footer>
-  <%= "\u00A9" %> MAGS
+  <%= "\u00A9" %> 2018 MAGS Ltd. All Rights Reserved
 </footer>
 </body>
 </html>
