--- a/app/views/products/root.html.erb
+++ b/app/views/products/root.html.erb
@@ -40,6 +40,7 @@
 <div class="p-3 mb-2 bg-gradient-primary text-white">
   <hr />
   <p class="text-info">
-    BrainEaze is your one stop shop for educational games, meditational resources, appeals and neurotropics and much more
+    BrainEaze is your one stop shop for educational games, meditational resources, appeals and neurotropics and much more.
+    <br>Rejuvenate the mind and activate the nuerons!
   </p>
 </div>
